# Sistema-Integral-De-Inventario-Unea

./: .hidden-items.json  .kilocodemodes  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
directrices de codigo/: arquitectura_sistema.md  codigo-1.md  codigo-2.md  codigo-3.md  codigo-5.md  despliegue_distribucion.md  explicacion_trabajo_realizado.md  glosario_complementario.md  hub_tablas_analysis.md  interfaz_usuario_herramientas.md  nuevos_apartados_documentacion.md  operaciones_base_datos.md  pruebas_calidad.md  requerimientos_pendientes.md  seguridad_rendimiento.md
docs/: hub_tablas.md
src/: App.css  App.tsx  DatabaseDashboard.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consulta_tablas.rs  crear_columna_fecha.rs  crear_registro.rs  database_manager.rs  detalle_registro.rs  editar.rs  eliminar_columna.rs  exportar_tabla.rs  hub_tablas.rs  importar_tabla.rs  io_utils.rs  main.rs  obtener_info_columnas.rs  subir_imagen.rs  validar_columna.rs  validar_tabla.rs
src-tauri/src/ingresar_img_thumbnails/: mod.rs
src/components/: TableCard.tsx
src/components/layout/: Header.module.css  Header.tsx  Sidebar.tsx
src/components/ui/: CreateTableModal.tsx  DatabaseTable.module.css  DatabaseTable.tsx  ImportarExportar.tsx  TablaSegura.tsx  TableCard.tsx  consulta_tabla_front.tsx
src/context/: TableCreationContext.tsx  ThemeContext.tsx  index.ts
src/hooks/: index.ts
src/pages/: Configuracion.tsx  DatabaseDashboard.tsx  Home.tsx  about.tsx  editar_fila.tsx  hub_tablas.tsx  pagina.tsx
src/pages/create-record/: CreateRecordPage.tsx
src/pages/dashboard/: DatabaseDashboard.module.css  DatabaseDashboard.tsx
src/pages/database/: editar_fila.tsx  hub_tablas.tsx  pagina.tsx
src/pages/home/: Home.tsx  about.module.css  about.tsx
src/pages/pagina-detalles/: detalles-consultas.module.css  detalles-consultas.tsx
src/pages/settings/: Configuracion.module.css  Configuracion.tsx
src/pages/types/: index.ts
src/services/api/: index.ts
src/services/database/: index.ts
src/styles/: InventarioDashboard.module.css  Sidebar.module.css  editar_fila.module.css  estilosPaginatsx.css  globals.css  importarexportar.css  modals.css  tabla.css
src/styles/themes/: index.ts
src/types/: global.d.ts
src/utils/: index.ts  pdfGenerator.ts
tests/: tableCreation.test.js
