[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

[build-dependencies]
# Versi칩n 1.5.6
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

# Tauri principal
tauri = { version = "1.5.6", features = [ "protocol-all", "path-all", "dialog-all", "fs-all", "shell-open" ] }

# Base de datos SQLite
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Manejo de fechas y tiempos
chrono = { version = "0.4.42", features = ["serde"] }

# Manejo de rutas del sistema
dirs = "5.0.0"

# Codificaci칩n base64 para im치genes
base64 = "0.21"

# Generaci칩n de PDFs

# Imagenes a pdf
image = "0.24"   # dependencia que inserta imagenes en los pdf y o manipulacion de las mismas
genpdf = "0.2"
typst = "0.12"
typst-render = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
